# simple_veo_backend

./: .coverage  .env.example  .gitignore  Dockerfile  FIRESTORE_MIGRATION.md  FRONTEND_MIGRATION_GUIDE.md  README.md  README_LOGGING.md  TO_DO.md  main.py  main.py.backup  pyproject.toml  requirements.txt  run.sh
app/: auth.py  config.py  firestore.py  logging_config.py  main.py  schemas.py
app/routers/: __init__.py  generation.py  health.py  library.py  workflow.py
app/services/: __init__.py  generation.py  library.py  library_firestore.py  workflow.py  workflow_firestore.py
documentation/: FIRESTORE_MIGRATION.md  TEST_COVERAGE.md  WORKFLOW_API.md  WORKFLOW_QUICKSTART.md
scripts/: deploy.sh  get_test_token.py  run_e2e_tests.sh  setup_workflow_storage.sh  test_workflow_api.sh
tests/: test_auth.py  test_firestore_smoke.py  test_schemas.py
tests/e2e/: README.md  conftest.py  test_complete_workflows.py  test_health.py  test_image_generation.py  test_library.py  test_text_and_upscale.py  test_video_generation.py  test_video_reference_images.py  test_workflow.py
tests/integration/: conftest.py  test_generation_api.py  test_library_api.py  test_workflow_api.py
tests/unit/: test_auth.py  test_config.py  test_generation_service.py  test_library_service.py  test_library_service_firestore.py  test_main.py  test_router_errors.py  test_routers.py  test_workflow_router.py  test_workflow_service.py  test_workflow_service_firestore.py
